[metadata]
name = Plover_Meltedsteno
version = 0.0.1
description = test purposes only :p
long_description = file: README.md
long_description_content_type = text/markdown
author = meltedsoftcream
license = CC ND 1.0 OR meltedlicense
url = https://github.com/meltedsoftcream/Plover_Meltedsteno
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
                 plover>=4.0.0.dev1
packages =
	Plover_meltedsteno

[options.entry_points]
plover.system =
  Meltedsteno= Plover_Meltedsteno.system
